# OooDev_Tute

./: .buildinfo  .gitignore  .readthedocs.yaml  LICENSE  README.md  README.rst  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  tute_ss.html
.doctrees/: environment.pickle  index.doctree  tute_ss.doctree
.github/workflows/: documentation.yaml
_static/: copybutton.js
dev_cmds/: run_http.py
docs/: conf.py  index.rst  requirements.txt  tute_ss.rst
