[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "OooDev Tutorials"
version = "0.1.0"
description = "Tutorials for OooDev"
license = "MIT"
readme = "README.md"
authors = [
    "flywire <flywire0@gmail.com>"
]
keywords = ["OooDev", "uno", "LIbreOffice", "macro"]
homepage = "https://github.com/flywire/OooDev_Tute"
documentation = "https://flywire.github.io/OooDev_Tute/index.html"
repository = "https://github.com/flywire/OooDev_Tute"

classifiers = [
    "Topic :: Office/Business",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "^3.8"
sphinx-tabs = ">=3.4.1"
sphinx-rtd-dark-mode = ">=1.2.4"
sphinxcontrib-spelling = ">=8.0.0"
esbonio = ">=0.16.1"
sphinx-design = "^0.4.1"
sphinx = "^6.2.1"
sphinx-copybutton = "^0.5.2"

[tool.ruff]
extended-select=["ANN", "C4", "N", "SIM", "TCH"]
ignore=[]
show-fixes=true
target="py38"